# BSFI_Chatbot

./: .env.example  .gitignore  .replit  README.md  app.py  demo_script.md  insurance_chatbot.py  knowledge_base.py  project_requirements.txt  pyproject.toml  report.md  requirements.txt  setup.py  utils.py  video.md
.streamlit/: config.toml
attached_assets/: Pasted--Health-Insurance-Policies-Basic-Health-Insurance-Our-Basic-Health-Insurance-plan-offers-cover-1745422656700.txt  Pasted--home-runner-workspace-pythonlibs-lib-python3-11-site-packages-langchain-google-genai-chat-models-p-1745506784950.txt  Pasted-streamlit-errors-StreamlitDuplicateElementKey-There-are-multiple-elements-with-the-same-key-thumbs-1745510016662.txt
docs/: answer.md  report.md  video.md
docs/api/: README.md
sample_insurance_policies/: README.md  readme.md
utils/: chat_utils.py  document_processor.py  evaluation.py  prompt_templates.py  session_manager.py
