[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "google-generativeai>=0.8.5",
    "langchain-google-genai>=2.0.10",
    "langchain>=0.3.24",
    "langchain-openai>=0.3.14",
    "openai>=1.75.0",
    "pypdf>=5.4.0",
    "streamlit>=1.44.1",
    "langchain-community>=0.3.22",
    "anthropic>=0.50.0",
    "reportlab>=4.4.0",
]
